--- a/config/config.json
+++ b/config/config.json
@@ -1,21 +1,26 @@
 {
   "development": {
-    "username": "jof6gdkhksfkrqyr",
-    "password": "q6p3mkg9opzn8eyz",
-    "database": "av8bmqp5xfayu8z4",
-    "host": "wftuqljwesiffol6.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
+    "username": "br6pxrjtzivqpbqj",
+    "password": "hn4c49sjyq6tyxzj",
+    "database": "hfa0ofhxmzki8387",
+    "host": "dno6xji1n8fm828n.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
     "port": 3306,
     "dialect": "mysql"
   },
   "test": {
-    "username": "bm8ozsqt8ehomlw5",
-    "password": "xr1wsmn48fb916jq",
-    "database": "gajb8m09t9ub53b5",
-    "host": "s3lkt7lynu0uthj8.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
+    "username": "br6pxrjtzivqpbqj",
+    "password": "hn4c49sjyq6tyxzj",
+    "database": "hfa0ofhxmzki8387",
+    "host": "dno6xji1n8fm828n.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
+    "port": 3306,
     "dialect": "mysql"
   },
   "production": {
-    "dialect": "mysql",
-    "use_env_variable":"JAWSDB_URL"
+    "username": "br6pxrjtzivqpbqj",
+    "password": "hn4c49sjyq6tyxzj",
+    "database": "hfa0ofhxmzki8387",
+    "host": "dno6xji1n8fm828n.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
+    "port": 3306,
+    "dialect": "mysql"
   }
 }
